Adiciona endpoint para criação de palestrantes (#28)
* Move lógica de criação de palestrante para módulo
* Adiciona casos de teste para POST de speakers
* Corrige deprecation warnings em queries
* Persiste id do usuário criado na criação de palestrante
* Adiciona documentação para o novo endpoint
